--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,7 +26,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
+          <a class="nav-link" href="{{ path('new_form') }}">New</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Pricing</a>
